--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -87,13 +87,13 @@
     "balances": "Saldos",
     "buy": "Comprar",
     "careers": {
-        "heading": "Posições em aberto",
-        "intro": "Nós acreditamos em talento. Junte-se a nós para construir a próxima geração de DeFi",
-        "cta-button": "Candidatar",
-        "back-link": "Voltar para Posições",
-        "no-open-positions": "Não há posições abertas no momento. Mas, estamos sempre em busca do melhor talento para se juntar a nós.",
-        "no-positions-you-like": "Não encontrou algo que te interesse? Nos conte o que deseja! Estamos sempre procurando os melhores talentos para se juntarem a nós!",
-        "write-us": "Mande seu CV para "
+      "heading": "Posições em aberto",
+      "intro": "Nós acreditamos em talento. Junte-se a nós para construir a próxima geração de DeFi",
+      "cta-button": "Candidatar",
+      "back-link": "Voltar para Posições",
+      "no-open-positions": "Não há posições abertas no momento. Mas, estamos sempre em busca do melhor talento para se juntar a nós.",
+      "no-positions-you-like": "Não encontrou algo que te interesse? Nos conte o que deseja! Estamos sempre procurando os melhores talentos para se juntarem a nós!",
+      "write-us": "Mande seu CV para "
     },
     "submit": "Enviar",
     "title": "Contate a Oasis"
@@ -553,7 +553,7 @@
   },
   "view": "Ver",
   "view-more": "Ver mais",
-  "view-on-etherscan": "Ver no Etherscan",
+  "view-on-etherscan": "Ver no Blocksscan",
   "waiting-approval": "Aguardando aprovação",
   "waiting-confirmation": "Aguardando confirmação da transação",
   "waiting-proxy-deployment": "Aguardando Deploy do Proxy",
