USX icon, fix text

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -183,7 +183,7 @@
   "keyWithCount_plural": "{{count}} items",
   "landing": {
     "hero": {
-      "headline": "USX – Xinfin Stablecoin",
+      "headline": "USX – XDC Collateralised Stablecoin",
       "subheader": "Open a Vault, deposit collaterals and borrow USX.<0/> Connect a wallet to start."
     }
   },
