--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -15,7 +15,7 @@
   "account-support": "Support",
   "account-terms": "Terms",
   "activity": "Activity",
-  "add-to-xdcpay": "add to XDCPay",
+  "add-to-wallet": "add to wallet",
   "address": "Address",
   "address-invalid": "Address not found",
   "adjust-your-position": "Adjust your position",
