Added Beta Version warning & defaulted to Apothem

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -31,6 +31,7 @@
   "balance": "Balance",
   "balance-insufficient": "Not enough USXD in your wallet",
   "balances": "Balances",
+  "beta-disclaimer": "* This is a Beta version. We recommend using the Apothem Network",
   "buy": "Buy",
   "careers": {
     "heading": "Open Roles",
